<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/TituloApp"
                android:text="@string/formulario"
                android:textSize="30sp"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:textColor="@color/black" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/nombre"
                          android:textSize="16sp"
                          android:textColor="@color/black"/>
                <EditText android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:id="@+id/etNombre"/>
        </LinearLayout>

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/etCorreo"
                  android:inputType="textEmailAddress"
                  android:hint="@string/correo"/>

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/etCedula"
                  android:inputType="number"
                  android:hint="@string/documento"/>

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:id="@+id/bnguardar"
                android:textAllCaps="false"
                android:textSize="20sp"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/txResultado"
                  android:textSize="20sp"
                  android:textColor="@color/red"
                  android:text=""/>

</LinearLayout>

